--- a/estimate_theme/templates/regions/region--copyright.html.twig
+++ b/estimate_theme/templates/regions/region--copyright.html.twig
@@ -21,7 +21,7 @@
 
 {% if content %}
   <div{{ attributes.addClass(classes) }}>
-    <div class="justify-content-md-around d-flex">
+    <div class="justify-content-md-around align-items-center d-flex flex-column flex-lg-row">
       {{ content }}
     </div>
   </div>
