--- a/estimate_theme/css/general.css
+++ b/estimate_theme/css/general.css
@@ -11,3 +11,14 @@ h1 {
 footer {
   margin-top: 30px;
 }
+
+@media (max-width: 991.98px) {
+  h1 {
+    font-size: 24px;
+    line-height: 34px;
+  }
+
+  h2 {
+    font-size: 22px;
+  }
+}
