--- a/estimate_theme/templates/regions/region--footer.html.twig
+++ b/estimate_theme/templates/regions/region--footer.html.twig
@@ -21,7 +21,7 @@
 
 {% if content %}
   <div{{ attributes.addClass(classes) }}>
-    <div class="region--{{ region }}__inner justify-content-md-center d-flex">
+    <div class="region--{{ region }}__inner justify-content-center d-flex">
       {{ content }}
     </div>
   </div>
