--- a/estimate_theme/templates/regions/region--navigation_main.html.twig
+++ b/estimate_theme/templates/regions/region--navigation_main.html.twig
@@ -22,7 +22,7 @@
 
 {% if content %}
     <div{{ attributes.addClass(classes) }}>
-        <div class="region--{{ region }}__inner h-100">
+        <div class="region--{{ region }}__inner h-100 d-flex align-items-center">
             {{ content }}
         </div>
     </div>
