--- a/estimate_theme/css/menu.css
+++ b/estimate_theme/css/menu.css
@@ -1,6 +1,6 @@
 .top-navbar {
-  padding-top: 0;
-  padding-bottom: 50px;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .menu--estimate-main-navigation-menu {
@@ -18,22 +18,52 @@
   display: flex;
   align-items: end;
   margin: 0 7px;
+  height: 40px;
 }
 
 .menu--estimate-main-navigation-menu li:last-child {
-  background: #1C2A4A 0% 0% no-repeat padding-box;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-radius: 30px;
+  background: #0033A7;
 }
 
-.menu--estimate-main-navigation-menu .nav-link {
-  padding: 70px 12px 15px;
+.menu--estimate-main-navigation-menu li:last-child a.nav-link{
+  width: 130px;
+  justify-content: center;
+  display: flex;
+}
+
+.menu--estimate-main-navigation-menu li:last-child a.nav-link::after {
+  background: url(../images/support.svg) no-repeat;  content: '';
+  position: static;
+  width: 20px;
+  height: 20px;
+  display: block;
+  margin-left: 13px;
+}
+
+#block-estimate-user-account-menu{
+  align-items: center;
+  display: flex;
+}
+
+#navbarSupportedContent {
+  flex-wrap: wrap !important;
+  justify-content: flex-end !important;
+}
+
+.menu--estimate-main-navigation-menu li:last-child a{
+  width: 110px;
+}
+
+.active-link {
+  text-decoration: overline
 }
 
 @media (max-width: 991.98px) {
   .top-navbar {
     padding-top: 25px;
     padding-bottom: 25px;
+    margin: 30px;
   }
 
   .menu--estimate-main-navigation-menu ul {
@@ -41,6 +71,9 @@
   }
 
   .menu--estimate-main-navigation-menu li:last-child {
+    background: none;
+  }
+  .menu--estimate-main-navigation-menu li:last-child a{
     background: none;
   }
 
