--- a/estimate_theme/css/style.css
+++ b/estimate_theme/css/style.css
@@ -72,6 +72,7 @@
   --bs-link-hover-color: #00309e;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
+  --bs-nav-link-font-size: 16px;
 }
 
 *,
@@ -649,11 +650,7 @@ progress {
     max-width: 1140px;
   }
 }
-@media (min-width: 1400px) {
-  .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
-    max-width: 1320px;
-  }
-}
+
 .row {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
@@ -11409,8 +11406,7 @@ footer .region-footer {
 
 .region-sidebar-first,
 .region-sidebar-second,
-.region-footer,
-.region-content {
+.region-footer {
   padding: 0 0.5rem;
 }
 
