--- a/estimate_theme/templates/views/views-view--estimate-view.html.twig
+++ b/estimate_theme/templates/views/views-view--estimate-view.html.twig
@@ -32,12 +32,12 @@
 #}
 {%
   set classes = [
-    'view',
-    'view-' ~ id|clean_class,
-    'view-id-' ~ id,
-    'view-display-id-' ~ display_id,
-    dom_id ? 'js-view-dom-id-' ~ dom_id,
-  ]
+  'view',
+  'view-' ~ id|clean_class,
+  'view-id-' ~ id,
+  'view-display-id-' ~ display_id,
+  dom_id ? 'js-view-dom-id-' ~ dom_id,
+]
 %}
 <div{{ attributes.addClass(classes) }}>
   {{ title_prefix }}
@@ -46,13 +46,18 @@
   {% endif %}
   {{ title_suffix }}
   {% if header %}
-    <div class="view-header">
-      <div><img src=""></div>
-      <div>{{ header }}</div>
+    <div class="view-header-dashboard d-flex">
+      <div class="view-header-dashboard-title">
+        <p>You Cannot Manage What You Cannot Measure...</p>
+      </div>
+      <div class="view-header-dashboard-calendar d-flex align-items-center">
+        <div class="image-calendar">{{ source(directory ~ '/images/calendar.svg') }}</div>
+        <div>{{ header }}</div>
+      </div>
     </div>
   {% endif %}
   {% if exposed %}
-    <div class="view-filters">
+    <div class="view-filters-dashboard">
       {{ exposed }}
     </div>
   {% endif %}
