--- a/estimate_theme/templates/layout/page.html.twig
+++ b/estimate_theme/templates/layout/page.html.twig
@@ -60,7 +60,7 @@ set footer_classes = ' ' ~
   {{ page.header }}
 
   <nav class="{{ nav_classes }}">
-    <div class="container d-flex align-items-stretch">
+    <div class="container d-flex">
       {{ page.navigation_branding }}
 
       <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
