--- a/estimate_theme/templates/menus/menu--estimate-main-navigation-menu.html.twig
+++ b/estimate_theme/templates/menus/menu--estimate-main-navigation-menu.html.twig
@@ -32,7 +32,7 @@
   {% import _self as menus %}
   {% if items %}
     {% if menu_level == 0 %}
-      <ul class="nav navbar-nav list-group-horizontal h-100">
+      <ul class="nav navbar-nav list-group-horizontal">
     {% else %}
       <ul>
     {% endif %}
