--- a/estimate_theme/css/fonts.css
+++ b/estimate_theme/css/fonts.css
@@ -4,3 +4,10 @@
   font-style: normal;
   font-weight: normal;
 }
+
+@font-face {
+  font-family: "Expressway";
+  src: url("../fonts/expressway_bold.ttf") format("truetype");
+  font-style: normal;
+  font-weight: bold;
+}
